Removed overflow-hidden because of display issues with effects.

--- a/apollo-src/scss/apollo-tiles.scss
+++ b/apollo-src/scss/apollo-tiles.scss
@@ -136,7 +136,6 @@ $gutter: 15 !default; // this should match the bootstrap gutter used
             padding-right: #{$gutter}px;
             padding-left: #{$gutter}px;
             width: 100%;
-            overflow: hidden;
         }
     }
 } 
